feat(workspace-apps): list app references
